--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Black Jack</title>
-    <link rel="stylesheet" href="./styles/cards.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
-    />
+    <link rel="stylesheet" href="./styles/cards/cards.css" />
+    <link rel="stylesheet" href="./styles/cards/cards-ie.css" />
+    <link rel="stylesheet" href="./styles/cards/cards-ie9.css" />
+    <link rel="stylesheet" href="./styles/animate.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
@@ -35,6 +34,10 @@
         </div>
       </div>
     </div>
-    <script src="scripts.js"></script>
+
+    <script src="./scripts/cardDecks.js"></script>
+    <script src="./scripts/globalVars.js"></script>
+    <script src="./scripts/gameFuncs.js"></script>
+    <script src="./scripts/dom.js"></script>
   </body>
 </html>
