improved UX cards come down from top of page

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           <div id="player" class="center"></div>
 
           <div class="center buttons">
-            <div id="game-buttons" class="hidden">
+            <div id="game-buttons" class="hidden animated">
               <a href="#" id="hit" class="hit">Hit!</a>
               <a href="#" id="stay" class="stay">Stay</a>
             </div>
-            <div id="play-btn">
+            <div class="animated" id="play-btn">
               <a href="#" class="play">Play BlackJack!</a>
             </div>
           </div>
