--- a/index.html
+++ b/index.html
@@ -4,40 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Black Jack</title>
-    <link rel="stylesheet" href="./styles/cards/cards.css" />
-    <link rel="stylesheet" href="./styles/cards/cards-ie.css" />
-    <link rel="stylesheet" href="./styles/cards/cards-ie9.css" />
-    <link rel="stylesheet" href="./styles/animate.css" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="outside-container">
-      <div class="playingCards faceImages">
-        <div class="container">
-          <div id="dealer" class="center"></div>
-          <h3 id="dealer-score" class="center"></h3>
-          <h3 id="player-score" class="center"></h3>
-          <div id="player" class="center"></div>
-
-          <div class="center buttons">
-            <div id="game-buttons" class="hidden animated">
-              <a href="#" id="hit" class="hit">Hit!</a>
-              <a href="#" id="stay" class="stay">Stay</a>
-            </div>
-            <div class="animated" id="play-btn">
-              <a href="#" class="play">Play BlackJack!</a>
-            </div>
-          </div>
-          <h2 id="game-over" class="center"></h2>
-        </div>
+    <div class="container">
+      <div>
+        <h3>❤️♠️♣️♦️Black Jack♠️♣️♦️❤️</h3>
+        <!-- <button id="re-play">Play again</button> -->
+        <h4 class="container">Refresh page to play again</h4>
       </div>
     </div>
-
-    <script src="./scripts/cardDecks.js"></script>
-    <script src="./scripts/globalVars.js"></script>
-    <script src="./scripts/gameFuncs.js"></script>
-    <script src="./scripts/dom.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
